# Test_Auto

./: .gitignore  README.md  pyproject.toml  requirements.txt
.kiro/sh/: kiro-start.sh
.kiro/steering/: code-review.md  commit-conventions.md  dev-guidelines.md  executor.md  kiro-usage.md  self-evolving-rules.md
configs/: config.example.yaml
docs/: architecture.md  kiro-log.md  progress.md
test_auto/: __init__.py  __main__.py  pipeline.py
test_auto/analyzer/: coverage.py  dependency_graph.py  java_parser.py  manifest_parser.py  resource_parser.py  scanner.py
test_auto/config/: settings.py
test_auto/generator/e2e/: generator.py
test_auto/generator/manual/: generator.py
test_auto/generator/unit/: generator.py
test_auto/models/: schemas.py
test_auto/repo/: manager.py
test_auto/reporter/: html_reporter.py
test_auto/runner/opencv/: baseline_manager.py  comparator.py
test_auto/runner/stability/: crash_analyzer.py  executor.py
test_auto/runner/ui/: executor.py
test_auto/storage/: case_manager.py  database.py
test_auto/utils/: adb.py  watcher.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_reporter.py  test_storage.py
