[project]
name = "test-auto"
version = "0.1.0"
description = "Android App 自动化测试平台"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "javalang>=0.13.0",
    "uiautomator2>=3.2.5",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
]

[project.scripts]
test-auto = "test_auto.__main__:main"

[tool.setuptools.packages.find]
include = ["test_auto*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
